// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Rendering Variants alignment-center: should match snapshot 1`] = `
<Text
  alignment="center"
  style={
    Array [
      Object {
        "color": "#1C2530",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "center",
      },
    ]
  }
  testID="text"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering Variants alignment-left: should match snapshot 1`] = `
<Text
  alignment="left"
  style={
    Array [
      Object {
        "color": "#1C2530",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "left",
      },
    ]
  }
  testID="text"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering Variants alignment-right: should match snapshot 1`] = `
<Text
  alignment="right"
  style={
    Array [
      Object {
        "color": "#1C2530",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "right",
      },
    ]
  }
  testID="text"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering Variants inversed: should match snapshot 1`] = `
<Text
  inversed={true}
  style={
    Array [
      Object {
        "color": "#FFFFFF",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "left",
      },
    ]
  }
  testID="text"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering Variants muted: should match snapshot 1`] = `
<Text
  muted={true}
  style={
    Array [
      Object {
        "color": "#97A4AB",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "left",
      },
    ]
  }
  testID="text"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering Variants subtitle: should match snapshot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#1C2530",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "left",
      },
    ]
  }
  subtitle={true}
  testID="text"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering Variants variant="caption": should match snapshot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#1C2530",
        "fontFamily": "System",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "left",
      },
    ]
  }
  testID="text"
  variant="caption"
>
  Paragraph goes here
</Text>
`;

exports[`Text Rendering renders itself correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#1C2530",
        "fontFamily": "System",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "textAlign": "left",
      },
    ]
  }
  testID="text"
>
  Paragraph goes here
</Text>
`;
